--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<version>3.3.3</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- end test dependencies  -->
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.10</version>
+		</dependency>
 
 	</dependencies>
 
