--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,16 @@
 		</dependency>
 		<!-- end test dependencies  -->
 
+		<!-- swagger + springdoc -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.5.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 	</dependencies>
